tests/ui-nightly/diagnostic-not-implemented-try-from-bytes.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::TryFromBytes` is not satisfied
  --> tests/ui-nightly/diagnostic-not-implemented-try-from-bytes.rs:18:28
   |
18 |     takes_try_from_bytes::<NotZerocopy>();
   |                            ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `zerocopy::TryFromBytes` is not implemented for `NotZerocopy`
  --> tests/ui-nightly/../../zerocopy-derive/tests/include.rs
   |
   |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::TryFromBytes`:
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
             (A, B, C, D, E, F, G)
             (A, B, C, D, E, F, G, H)
           and $N others
note: required by a bound in `takes_try_from_bytes`
  --> tests/ui-nightly/diagnostic-not-implemented-try-from-bytes.rs:21:28
   |
21 | fn takes_try_from_bytes<T: TryFromBytes>() {}
   |                            ^^^^^^^^^^^^ required by this bound in `takes_try_from_bytes`
   = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-46104ccf19671a9d.long-type-12293059650037732854.txt'
   = note: consider using `--verbose` to print the full type name to the console
